[gd_scene load_steps=30 format=3 uid="uid://bq1sb473y4dyk"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_0v0p1"]
[ext_resource type="TileSet" uid="uid://w22ttvploon4" path="res://Tilesets/a-star_tileset.tres" id="1_h7tmq"]
[ext_resource type="Texture2D" uid="uid://bc0ynokfxx437" path="res://PNGs/2023-mar-11-character.png" id="2_7lhd2"]
[ext_resource type="Script" path="res://Scripts/player.gd" id="2_ck81m"]
[ext_resource type="Script" path="res://Scripts/highlight_tile_map.gd" id="3_6cuhn"]
[ext_resource type="Resource" uid="uid://diajsj1xxbp2x" path="res://Resources/player_resource.tres" id="4_bop26"]
[ext_resource type="PackedScene" uid="uid://bu5xp5yyr337h" path="res://Scenes/a_star_graph_maker.tscn" id="4_v1e46"]
[ext_resource type="Texture2D" uid="uid://cju37jn6dd21m" path="res://2023-mar-11-character.png" id="5_babgn"]
[ext_resource type="PackedScene" uid="uid://blsrln5ga8u8x" path="res://Scenes/PickupHolder.tscn" id="7_vg3gv"]
[ext_resource type="Script" path="res://Scripts/input_handler.gd" id="8_bddty"]
[ext_resource type="PackedScene" uid="uid://b3v0v0asdnqom" path="res://Scenes/pickup_2d.tscn" id="8_cu0ha"]
[ext_resource type="Resource" uid="uid://boqf80k31o8gi" path="res://Resources/sword.tres" id="10_613t6"]
[ext_resource type="PackedScene" uid="uid://fnrfm3nwg8h3" path="res://Scenes/enemy.tscn" id="11_nj86q"]
[ext_resource type="Texture2D" uid="uid://bk2vkiqs8jafu" path="res://2023-mar-11-enemy.png" id="12_vkp3t"]
[ext_resource type="Script" path="res://Scripts/turn_handler.gd" id="13_f4kkf"]
[ext_resource type="Theme" uid="uid://mwkasgnsje4a" path="res://Theme/default_theme.tres" id="16_3qsuf"]
[ext_resource type="Script" path="res://Scripts/hud.gd" id="16_q10om"]
[ext_resource type="Resource" uid="uid://dm2oo7828ypak" path="res://Resources/Enemy resources/basic_enemy.tres" id="17_toosd"]

[sub_resource type="Animation" id="Animation_hx5dd"]
length = 1.002
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_babgn")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.167, 0.334, 0.501, 0.668, 0.835),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8, 9, 10]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../PickupHolder:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.168988, 0.350574, 0.669523, 0.836895),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(-4, -2), Vector2(-5, -3), Vector2(5, 6), Vector2(6, 6), Vector2(-1, 3)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../PickupHolder:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.350574, 0.836895),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [-1.57079, 1.57079, 0.0]
}

[sub_resource type="Animation" id="Animation_wrynm"]
length = 0.334
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_babgn")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.167),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../PickupHolder:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.166984),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(-5, 4), Vector2(-5, 5)]
}

[sub_resource type="Animation" id="Animation_3sadu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../PickupHolder:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-5, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../PickupHolder:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_fci4e"]
length = 0.668
loop_mode = 1
step = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_babgn")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.167, 0.334, 0.501),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 3]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../PickupHolder:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.167314, 0.334469, 0.500979),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(-5, 3), Vector2(-5, 4), Vector2(-5, 5), Vector2(-5, 4)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../PickupHolder:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_fklw8"]
length = 0.334
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_7lhd2")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.167),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1awuc"]
_data = {
"Attack": SubResource("Animation_hx5dd"),
"Idle": SubResource("Animation_wrynm"),
"RESET": SubResource("Animation_3sadu"),
"Walk": SubResource("Animation_fci4e"),
"default": SubResource("Animation_fklw8")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2lols"]
size = Vector2(16, 16)

[sub_resource type="Animation" id="Animation_kcv4s"]
length = 0.835
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("12_vkp3t")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.167, 0.334, 0.501, 0.668),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10]
}

[sub_resource type="Animation" id="Animation_uvy0f"]
length = 0.334
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("12_vkp3t")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.167),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_yqnim"]
length = 0.668
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("12_vkp3t")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.167, 0.334, 0.501),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bp4wh"]
_data = {
"Attack": SubResource("Animation_kcv4s"),
"Idle": SubResource("Animation_uvy0f"),
"Walk": SubResource("Animation_yqnim")
}

[node name="Main" type="Node2D"]
script = ExtResource("1_0v0p1")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("1_h7tmq")
format = 2
layer_0/name = "Grid"
layer_0/z_index = -2
layer_0/tile_data = PackedInt32Array(-196614, 0, 0, -131078, 0, 0, -65542, 0, 0, -6, 0, 0, 65530, 0, 0, 131066, 0, 0, 196602, 0, 0, 262138, 0, 0, -196613, 0, 0, -131077, 2, 0, -65541, 2, 0, -5, 2, 0, 65531, 2, 0, 131067, 0, 0, 196603, 2, 0, 262139, 0, 0, -196612, 0, 0, -131076, 2, 0, -65540, 2, 0, -4, 2, 0, 65532, 2, 0, 131068, 0, 0, 196604, 2, 0, 262140, 0, 0, -196611, 0, 0, -131075, 0, 0, -65539, 0, 0, -3, 2, 0, 65533, 2, 0, 131069, 0, 0, 196605, 2, 0, 262141, 0, 0, -196610, 0, 0, -131074, 2, 0, -65538, 0, 0, -2, 0, 0, 65534, 2, 0, 131070, 2, 0, 196606, 2, 0, 262142, 0, 0, -196609, 0, 0, -131073, 2, 0, -65537, 2, 0, -1, 0, 0, 65535, 2, 0, 131071, 2, 0, 196607, 2, 0, 262143, 0, 0, -262144, 0, 0, -196608, 2, 0, -131072, 2, 0, -65536, 2, 0, 0, 2, 0, 65536, 2, 0, 131072, 2, 0, 196608, 0, 0, -262143, 0, 0, -196607, 2, 0, -131071, 2, 0, -65535, 2, 0, 1, 2, 0, 65537, 2, 0, 131073, 2, 0, 196609, 0, 0, -262142, 0, 0, -196606, 2, 0, -131070, 2, 0, -65534, 2, 0, 2, 2, 0, 65538, 0, 0, 131074, 0, 0, 196610, 0, 0, -262141, 0, 0, -196605, 2, 0, -131069, 2, 0, -65533, 2, 0, 3, 2, 0, 65539, 0, 0, 131075, 2, 0, 196611, 0, 0, -262140, 0, 0, -196604, 2, 0, -131068, 2, 0, -65532, 2, 0, 4, 2, 0, 65540, 2, 0, 131076, 2, 0, 196612, 0, 0, -262139, 0, 0, -196603, 0, 0, -131067, 0, 0, -65531, 0, 0, 5, 0, 0, 65541, 0, 0, 131077, 0, 0, 196613, 0, 0)
layer_1/name = "Highlights"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = -1
layer_1/tile_data = PackedInt32Array()
layer_2/name = "Path"
layer_2/enabled = true
layer_2/modulate = Color(0.811765, 0.811765, 0.811765, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = 0
layer_2/tile_data = PackedInt32Array()
script = ExtResource("3_6cuhn")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(5, 5)

[node name="Player" type="CharacterBody2D" parent="." node_paths=PackedStringArray("tilemap") groups=["Players"]]
position = Vector2(8, 8)
collision_layer = 9
collision_mask = 6
script = ExtResource("2_ck81m")
tilemap = NodePath("../TileMap")
player_resource = ExtResource("4_bop26")
max_actions = 3

[node name="AStarGraphMaker" parent="Player" node_paths=PackedStringArray("tilemap") instance=ExtResource("4_v1e46")]
position = Vector2(-8, -8)
tilemap = NodePath("../../TileMap")

[node name="AsepriteAnimationPlayer" type="AnimationPlayer" parent="Player"]
root_node = NodePath("../PlayerSprite")
autoplay = "Idle"
libraries = {
"": SubResource("AnimationLibrary_1awuc")
}

[node name="PlayerSprite" type="Sprite2D" parent="Player"]
texture_filter = 1
texture = ExtResource("5_babgn")
hframes = 4
vframes = 3
frame = 5
metadata/_aseprite_wizard_config_ = {
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"op_exp": false,
"player": "Player/PlayerSprite/AsepriteAnimationPlayer",
"source": "res://Aseprite/2023-mar-11-character.aseprite"
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("RectangleShape2D_2lols")

[node name="PickupHolder" parent="Player" instance=ExtResource("7_vg3gv")]
position = Vector2(-5, 3)
rotation = 0.0

[node name="InputHandler" type="Node2D" parent="." node_paths=PackedStringArray("tilemap")]
script = ExtResource("8_bddty")
tilemap = NodePath("../TileMap")

[node name="Pickup2D" parent="." instance=ExtResource("8_cu0ha")]
position = Vector2(24, -24)
pickup_resource = ExtResource("10_613t6")

[node name="TurnHandler" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("13_f4kkf")

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("16_q10om")

[node name="TurnLabel" type="Label" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -10.0
offset_right = 16.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("16_3qsuf")
theme_override_font_sizes/font_size = 100
text = "___ TURN"

[node name="Enemy" parent="." node_paths=PackedStringArray("turn_handler", "tilemap") instance=ExtResource("11_nj86q")]
character_resource = ExtResource("17_toosd")
turn_handler = NodePath("../TurnHandler")
tilemap = NodePath("../TileMap")
allowed_tiles = "Moveable"

[node name="Sprite2D" type="Sprite2D" parent="Enemy"]
texture_filter = 1
texture = ExtResource("12_vkp3t")
hframes = 4
vframes = 3
metadata/_aseprite_wizard_config_ = {
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"op_exp": false,
"player": "Enemy/AnimationPlayer",
"source": "res://Aseprite/2023-mar-11-enemy.ase"
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Enemy"]
autoplay = "Idle"
libraries = {
"": SubResource("AnimationLibrary_bp4wh")
}

[connection signal="attacked_enemy" from="Player" to="TurnHandler" method="_on_player_attacked_enemy"]
[connection signal="attacked_enemy" from="Player" to="Enemy" method="_on_player_attacked_enemy"]
[connection signal="game_ended" from="TurnHandler" to="Player" method="_on_turn_handler_game_ended"]
[connection signal="game_ended" from="TurnHandler" to="HUD" method="_on_turn_handler_game_ended"]
[connection signal="turn_changed" from="TurnHandler" to="InputHandler" method="_on_turn_handler_turn_changed"]
[connection signal="turn_changed" from="TurnHandler" to="HUD" method="_on_turn_handler_turn_changed"]
[connection signal="turn_animation_finished" from="HUD" to="Player" method="_on_hud_turn_animation_finished"]
[connection signal="turn_animation_finished" from="HUD" to="Enemy" method="_on_hud_turn_animation_finished"]
[connection signal="attacked_player" from="Enemy" to="TurnHandler" method="_on_enemy_attacked_player"]
